--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql.agh.edu.pl:3306/weroolch?autoReconnect=true&useSSL=false
-spring.datasource.username=weroolch
-spring.datasource.password=AVGpj26pxpfima3m
+spring.datasource.url=jdbc:mysql://localhost:3306/flashcards?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
