Adding README.md, refactor

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 jar {
-  baseName = 'time-bank-manager'
+  baseName = 'flashcards'
   version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
