--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "deep-equal": "^1.0.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-flipcard": "^0.2.1",
     "react-interpolate-component": "^0.8.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
